# NIM_Duilib_Framework

./: .editorconfig  CMakeLists.txt
base/: CMakeLists.txt  base.h  base_export.h
base/encrypt/: des.cpp  des.h
base/file/: file_util.h
base/synchronization/: lock_posix.cpp  semaphore.h  semaphore_posix.cpp  semaphore_win.cpp  waitable_event_win.cpp
base/thread/: framework_thread.cpp  framework_thread.h  thread.h
base/time/: time.cpp  time.h  time_posix.cpp
base/util/: base64.cpp  valuemap.h
base/win32/: path_util.cpp  path_util.h  security_util.h  shared_memory.cpp
duilib/: CMakeLists.txt  UIlib.h
duilib/Animation/: AnimationManager.cpp  AnimationPlayer.cpp
duilib/Automation/: UIABoxProvider.cpp  UIABoxProvider.h  UIAButtonProvider.cpp  UIAButtonProvider.h  UIACheckBoxProvider.cpp  UIACheckBoxProvider.h  UIAComboBoxProvider.cpp  UIAComboBoxProvider.h  UIAControlProvider.cpp  UIAControlProvider.h  UIALabelProvider.cpp  UIALabelProvider.h  UIAListBoxItemProvider.cpp  UIAListBoxItemProvider.h  UIAListBoxProvider.cpp  UIAListBoxProvider.h  UIAProgressProvider.cpp  UIAProgressProvider.h  UIARichEditProvider.cpp  UIARichEditProvider.h  UIAScrollBarProvider.cpp  UIAScrollBarProvider.h  UIAScrollableBoxProvider.cpp  UIAScrollableBoxProvider.h  UIATreeNodeProvider.cpp  UIATreeNodeProvider.h  UIAWindowProvider.cpp  UIAWindowProvider.h
duilib/Control/: Button.h  CheckBox.h  Label.h  Menu.cpp  Menu.h  RichEdit.cpp  ScrollBar.h  Slider.h  TreeView.cpp  VirtualListBox.cpp  VirtualListBox.h
duilib/Core/: Define.cpp  Define.h  GlobalManager.cpp  Image.cpp  Placeholder.cpp
duilib/Render/: Bitmap.cpp  Bitmap.h  IRender.cpp  Render.cpp
duilib/Utils/: ApiWrapper.cpp  ApiWrapper.h  Delegate.h  DpiManager.cpp  DpiManager.h  FontManager.cpp  Macros.h  MultiLangSupport.cpp  OnScreenKeyboardManager.cpp  OnScreenKeyboardManager.h  Shadow.cpp  Shadow.h  TimerManager.cpp  Utils.h  VersionHelpers.h  WinImplBase.cpp
